--- a/MLFlowdb.ipynb
+++ b/MLFlowdb.ipynb
@@ -18,11 +18,17 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/databricks/python/lib/python3.12/site-packages/sklearn/utils/validation.py:2732: UserWarning: X has feature names, but LinearRegression was fitted without feature names\n  warnings.warn(\n/databricks/python/lib/python3.12/site-packages/sklearn/utils/validation.py:2732: UserWarning: X has feature names, but LinearRegression was fitted without feature names\n  warnings.warn(\n/databricks/python/lib/python3.12/site-packages/sklearn/utils/validation.py:2732: UserWarning: X has feature names, but LinearRegression was fitted without feature names\n  warnings.warn(\n2025/11/06 16:59:40 INFO mlflow.models.evaluation.default_evaluator: Testing metrics on first row...\n2025/11/06 16:59:40 WARNING mlflow.models.evaluation.evaluators.shap: SHAP or matplotlib package is not installed, so model explainability insights will not be logged.\n"
+      "/databricks/python/lib/python3.12/site-packages/sklearn/utils/validation.py:2732: UserWarning: X has feature names, but LinearRegression was fitted without feature names\n",
+      "  warnings.warn(\n",
+      "/databricks/python/lib/python3.12/site-packages/sklearn/utils/validation.py:2732: UserWarning: X has feature names, but LinearRegression was fitted without feature names\n",
+      "  warnings.warn(\n",
+      "/databricks/python/lib/python3.12/site-packages/sklearn/utils/validation.py:2732: UserWarning: X has feature names, but LinearRegression was fitted without feature names\n",
+      "  warnings.warn(\n",
+      "2025/11/06 16:59:40 INFO mlflow.models.evaluation.default_evaluator: Testing metrics on first row...\n",
+      "2025/11/06 16:59:40 WARNING mlflow.models.evaluation.evaluators.shap: SHAP or matplotlib package is not installed, so model explainability insights will not be logged.\n"
      ]
     }
    ],
@@ -43,7 +49,7 @@
     "    y,\n",
     "    test_size=0.2,\n",
     "    random_state=42\n",
-    ")\n",
+    ") \n",
     "\n",
     "input_example = pd.DataFrame(X_test[:5], columns=load_diabetes().feature_names)\n",
     "signature = mlflow.models.infer_signature(\n",
